# code-summarizer

./: .gitignore  README.md
backend/: app.py  pyproject.toml  requirements.txt
backend/code_summarizer/app/: routes.py
backend/code_summarizer/utils/: explainer.py
backend/notes_summarizer/app/: routes.py
backend/notes_summarizer/utils/: explainer.py
backend/tests/: test_app.py  test_explainer.py
frontend/: package-lock.json  package.json
frontend/notes-summarizer/: package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/: BackgroundImage.js  Bubbles.js  LargeInputText.js  ShimmerButton.js  SummarizedText.js  VerticalLinearStepper.js  WebsiteName.js
frontend/src/screens/: SummarizeScreen.js
frontend/src/styles/: theme.js
frontend/src/themes/: theme.js
