[tool.poetry]
name = "notes-summarizer-backend"
version = "0.1.0"
description = "Backend for react front end used to summarize notes"
authors = ["Zak Raicik <raicik.zach@Gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.3.2"
black = "^23.3.0"
python-dotenv = "^1.0.0"
openai = "^0.27.7"
pytest = "^7.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
